--- a/GH Overlay Code.css
+++ b/GH Overlay Code.css
@@ -1,4 +1,3 @@
-<!DOCTYPE css>
 .controller.custom{
 	background: url(https://i.imgur.com/RJA1fbb.png);
 	height: 726px;
@@ -36,7 +35,7 @@
 	width: 205px;
 	height: 19px;
 	top: 250px;
-	left: 291px:
+	left: 291px;
 }
 .custom .back, .custom .start{
 	background: url(https://i.imgur.com/bCEUlkG.png);
@@ -54,7 +53,7 @@
 .custom .start{
 	float: right;
 	width: 28px;
-	background-position: 37px 0:
+	background-position: 37px 0;
 }
 /* Face Buttons */
 .custom .abxy{
